Remove event config from application.yml, add new AcaPyConfig to read debug flags, fixes to dashboard count, remove Update DID from partner screen
Signed-off-by: Jason Sherman <jsherman@parcsystems.ca>